--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,13 @@ dependencies:
   google_fonts: ^3.0.1
   network_info_plus: ^2.1.3
   permission_handler: ^9.2.0
-  mobile_scanner: ^2.0.0
+  get: ^4.6.5
+  qr_code_scanner: ^1.0.0
+  path_provider: ^2.0.10
+  just_audio: ^0.9.24
+  socket_io: ^1.0.1
+  socket_io_client: ^1.0.2
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - assets/music.mp3
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
