--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   socket_io_client: ^1.0.2
   qr_flutter: ^4.0.0
   on_audio_query: ^2.6.1
+  lottie: ^1.3.0
+  uri_to_file: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +74,7 @@ flutter:
   assets:
      - assets/music.mp3
      - assets/logo.png
+     - assets/listening-music.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
