--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^2.2.3
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -72,9 +78,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/music.mp3
      - assets/logo.png
      - assets/listening-music.json
+     - assets/downloading.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
